# complyagent

./: .env.example  .gitignore  README.md  app.py  config.yaml  pyproject.toml
data/eval/: phase4_policy_c_baseline.txt
data/policies/synthetic/: policy_a_mostly_compliant.txt  policy_a_mostly_compliant_violations.json  policy_b_subtle_gaps.txt  policy_b_subtle_gaps_violations.json  policy_c_egregious_violations.txt  policy_c_egregious_violations_violations.json
docs/: eval_notes.md  project_notes.md
scripts/: build_chunks.py  build_vector_store.py  check_ground_truth_fix.py  eval_retrieval.py  eval_retrieval_articles_only.py  generate_spotcheck.py  inspect_article_50.py  inspect_articles_only_failures.py  inspect_chunks.py  inspect_failures.py  inspect_footnote_chars.py  inspect_pdf.py  inspect_pdf_articles.py  parse_gdpr_pdf.py  run_article_chunker.py  run_recital_chunker.py  smoke_test_llm.py  spot_check_analyst.py  spot_check_gap_hunter.py  spot_check_parser.py  spot_check_remediation.py  spot_check_report_writer.py  spot_check_researcher.py  verify_recitals.py  verify_roundtrip.py
src/complyagent/: __init__.py  config.py
src/complyagent/agents/: _retry.py  analyst.py  gap_checklist.py  gap_hunter.py  (+5 more)
tests/: test_findings_schema.py  test_policy_schema.py  test_regulation_schema.py  test_supervisor_schema.py
tests/agents/: test_analyst.py  test_gap_hunter.py  test_parser.py  test_remediation.py  test_report_writer.py
tests/integration/: _section_matcher.py  test_synthetic_policies.py
tests/supervisor/: test_graph_scaffolding.py  test_stream_audit.py
(+27 files in other folders)
