[project]
name = "complyagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ahmed Ali", email = "ahmaad.alii.213@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "chromadb>=1.5.9",
    "datasets>=5.0.0",
    "fastapi>=0.138.0",
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-cerebras>=0.8.2",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langgraph>=1.2.6",
    "lxml>=6.1.1",
    "pdfplumber>=0.11.10",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.6.0",
    "sse-starlette>=3.4.5",
    "streamlit>=1.58.0",
    "uvicorn[standard]>=0.49.0",
]


[project.scripts]
complyagent = "complyagent:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "mypy>=2.1.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
markers = [
    "integration: integration tests that hit real LLM APIs and retrieval (slow, deliberate-run only)",
]
